--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
-
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -39,6 +39,12 @@
             </li>
           </ul>
         </nav>
+        <button class="menu-mobil-btn" type="button">
+          <svg class="burger-icon" width="24"
+          height="24" aria-label="contacts-menu-mobil-icon">
+            <use href="./images/icons.svg#icon-heroicons"></use>
+          </svg>
+        </button>
         <address class="address-list">
           <ul class="address-link-item">
             <li class="address-item">
@@ -58,15 +64,15 @@
 
     <main>
       <!-- Section Hero -->
-      <section class="title-hero">
+      <!-- <section class="title-hero">
         <div class="container title-container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button type="button" class="button">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Section 2 -->
-      <section class="contant">
+      <!-- <section class="contant">
         <div class="container">
           <h2 class="visually-hidden">sk</h2>
           <ul class="benefits-icon-item">
@@ -121,11 +127,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Section Our Team -->
 
-      <section class="aside-main">
+      <!-- <section class="aside-main">
         <div class="container">
           <h2 class="aside">Our Team</h2>
           <ul class="aside-list">
@@ -299,10 +305,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Section Portfolio -->
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -435,10 +441,10 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
 
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container container-footer">
         <div class="logo-icon-footer">
           <a class="logo-link-too" href=""
@@ -503,10 +509,10 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!--DFCKDROP WITH MODAL WINDOW -->
-    <div class="backdrop">
+    <!-- <div class="backdrop">
       <div class="modal">
         <button class="close-button-modal" type="button">
           <svg
@@ -605,6 +611,72 @@
           </div>
           <button class="button-modal-form-send" type="button">Send</button>
         </form>
+      </div>
+    </div> -->
+
+    <!--===== MOBILE-MENU ====== -->
+    <div class="mobile-menu" >
+      <button class="mobile-menu-btn-enter">
+        <svg class="mobile-enter-close" width="8" height="8" aria-label="mobele menu enter">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <ul class="mobile-contacts-nav">
+        <li class="mobile-contakts-item">
+          <a class="mobile-nav-link nav-link-active" href="./index.html">Studio</a>
+        </li>
+        <li class="mobile-contakts-item">
+          <a class="mobile-nav-link" href="">Portfolio</a>
+        </li>
+        <li class="mobile-contakts-item">
+          <a class="mobile-nav-link" href="">Contacts</a>
+        </li>
+      </ul>
+      <address class="mobile-address-list">
+        <ul class="mobile-address-link-item">
+          <li class="mobile-address-item">
+            <a class="mobile-address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li class="mobile-address-item">
+            <a class="mobile-address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+      </address>
+      <div class="social-page-mobile">
+        <ul class="social-list--mobile">
+          <li class="social-list-item-mobile">
+            <a href="#" class="footer-icon-aside-mobile">
+              <svg class="social-list-icon-mobile" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item-mobile">
+            <a href="#" class="footer-icon-aside-mobile">
+              <svg class="social-list-icon-mobile" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item-mobile">
+            <a href="#" class="footer-icon-aside-mobile">
+              <svg class="social-list-icon-mobile" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item-mobile">
+            <a href="#" class="footer-icon-aside-mobile">
+              <svg class="social-list-icon-mobile" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
