--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <!-- <header class="page-header">
       <div class="container nav-container">
         <nav class="page-header-nav">
           <a class="logo-link" href=""
@@ -60,16 +60,16 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- Section Hero -->
-      <!-- <section class="title-hero">
+       <section class="title-hero">
         <div class="container title-container">
           <h1 class="title">Effective Solutions for Your Business</h1>
-          <button type="button" class="button">Order Service</button>
+          <button class="button" type="button" >Order Service</button>
         </div>
-      </section> -->
+      </section> 
 
       <!-- Section 2 -->
       <!-- <section class="contant">
