--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
     <main>
       <!-- Section Hero -->
-       <section class="title-hero">
+       <!-- <section class="title-hero">
         <div class="container title-container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="button" type="button" >Order Service</button>
         </div>
-      </section> 
+      </section>  -->
 
       <!-- Section 2 -->
       <!-- <section class="contant">
@@ -82,11 +82,13 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
+              <div class="benefits-tabl">
               <h3 class="benefits-second">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
+            </div>
             </li>
             <li class="benefits-icon-menu">
               <div class="benefits-icon-icon">
@@ -94,11 +96,13 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
+              <div class="benefits-tabl">
               <h3 class="benefits-second">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
+              </div>
             </li>
 
             <li class="benefits-icon-menu">
@@ -107,11 +111,13 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
+              <div class="benefits-tabl">
               <h3 class="benefits-second">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
+              </div>
             </li>
             <li class="benefits-icon-menu">
               <div class="benefits-icon-icon">
@@ -119,19 +125,21 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
+              <div class="benefits-tabl">
               <h3 class="benefits-second">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
+              </div>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>  -->
 
       <!-- Section Our Team -->
 
-      <!-- <section class="aside-main">
+       <section class="aside-main">
         <div class="container">
           <h2 class="aside">Our Team</h2>
           <ul class="aside-list">
@@ -305,7 +313,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> 
 
       <!-- Section Portfolio -->
       <!-- <section class="portfolio">
