--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <!-- <header class="page-header">
+    <header class="page-header">
       <div class="container nav-container">
         <nav class="page-header-nav">
           <a class="logo-link" href=""
@@ -40,8 +40,12 @@
           </ul>
         </nav>
         <button class="menu-mobil-btn" type="button">
-          <svg class="burger-icon" width="24"
-          height="24" aria-label="contacts-menu-mobil-icon">
+          <svg
+            class="burger-icon"
+            width="24"
+            height="24"
+            aria-label="contacts-menu-mobil-icon"
+          >
             <use href="./images/icons.svg#icon-heroicons"></use>
           </svg>
         </button>
@@ -60,19 +64,19 @@
           </ul>
         </address>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <!-- Section Hero  -->
-      <!-- <section class="title-hero">
+      <section class="title-hero">
         <div class="container title-container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="button" type="button">Order Service</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- Section 2 -->
-      <!-- <section class="contant">
+      <section class="contant">
         <div class="container">
           <h2 class="visually-hidden">sk</h2>
           <ul class="benefits-icon-item">
@@ -83,12 +87,12 @@
                 </svg>
               </div>
               <div class="benefits-tabl">
-              <h3 class="benefits-second">Strategy</h3>
-              <p class="text">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </div>
+                <h3 class="benefits-second">Strategy</h3>
+                <p class="text">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </div>
             </li>
             <li class="benefits-icon-menu">
               <div class="benefits-icon-icon">
@@ -97,11 +101,11 @@
                 </svg>
               </div>
               <div class="benefits-tabl">
-              <h3 class="benefits-second">Punctuality</h3>
-              <p class="text">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
+                <h3 class="benefits-second">Punctuality</h3>
+                <p class="text">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
               </div>
             </li>
 
@@ -112,11 +116,11 @@
                 </svg>
               </div>
               <div class="benefits-tabl">
-              <h3 class="benefits-second">Diligence</h3>
-              <p class="text">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
+                <h3 class="benefits-second">Diligence</h3>
+                <p class="text">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
               </div>
             </li>
             <li class="benefits-icon-menu">
@@ -126,25 +130,26 @@
                 </svg>
               </div>
               <div class="benefits-tabl">
-              <h3 class="benefits-second">Technologies</h3>
-              <p class="text">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
+                <h3 class="benefits-second">Technologies</h3>
+                <p class="text">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
               </div>
             </li>
           </ul>
         </div>
-      </section>  -->
+      </section>
 
       <!-- Section Our Team -->
 
-      <!-- <section class="aside-main">
+      <section class="aside-main">
         <div class="container">
           <h2 class="aside">Our Team</h2>
           <ul class="aside-list">
             <li class="aside-item">
-              <img srcset="../images/ourteam/gerrera-img@2x.jpg 2x"
+              <img
+                srcset="../images/ourteam/gerrera-img@2x.jpg 2x"
                 class="aside-pic"
                 src="../images/ourteam/images-gerrera.jpg"
                 alt="Mark Guerrero"
@@ -186,7 +191,8 @@
               </div>
             </li>
             <li class="aside-item">
-              <img srcset="../images/ourteam/ford-img@2x.jpg 2x"
+              <img
+                srcset="../images/ourteam/ford-img@2x.jpg 2x"
                 class="aside-pic"
                 src="./images/ourteam/images-ford.jpg"
                 alt="Tom Ford"
@@ -228,7 +234,8 @@
               </div>
             </li>
             <li class="aside-item">
-              <img srcset="../images/ourteam/garcia-img@2x.jpg 2x"
+              <img
+                srcset="../images/ourteam/garcia-img@2x.jpg 2x"
                 class="aside-pic"
                 src="./images/ourteam/images-garcia.jpg"
                 alt="Camila Garcia"
@@ -270,7 +277,8 @@
               </div>
             </li>
             <li class="aside-item">
-              <img srcset="../images/ourteam/wilson-img@2x.jpg 2x"
+              <img
+                srcset="../images/ourteam/wilson-img@2x.jpg 2x"
                 class="aside-pic"
                 src="./images/ourteam/images-wilson.jpg"
                 alt="Daniel Wilson"
@@ -313,7 +321,7 @@
             </li>
           </ul>
         </div>
-      </section>  -->
+      </section>
 
       <!-- Section Portfolio -->
       <section class="portfolio">
@@ -506,7 +514,7 @@
     </main>
 
     <!-- Footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container container-footer">
         <div class="logo-icon-footer">
           <a class="logo-link-too" href=""
@@ -562,6 +570,7 @@
                 id="form-input-email"
                 placeholder="E-mail"
             /></label>
+
             <button class="footer-button-form" type="submit">
               Subscribe
               <svg class="icon-frame" width="24" height="24">
@@ -571,10 +580,10 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!--DFCKDROP WITH MODAL WINDOW -->
-    <!-- <div class="backdrop">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-button-modal" type="button">
           <svg
@@ -674,7 +683,7 @@
           <button class="button-modal-form-send" type="button">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <!--===== MOBILE-MENU ====== -->
     <div class="mobile-menu">
