--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
     <main>
       <!-- Section Hero  -->
+      <
       <section class="title-hero">
         <div class="container title-container">
           <h1 class="title">Effective Solutions for Your Business</h1>
@@ -686,7 +687,7 @@
     </div>
 
     <!--===== MOBILE-MENU ====== -->
-    <div class="mobile-menu">
+    <div class="mobile-menu" is-open>
       <button class="mobile-menu-btn-enter">
         <svg
           class="mobile-enter-close"
