--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
           <ul class="aside-list">
             <li class="aside-item">
               <img
-                srcset="../images/ourteam/gerrera-img@2x.jpg 2x"
                 class="aside-pic"
-                src="../images/ourteam/images-gerrera.jpg"
+                srcset="./images/ourteam/gerrera-img@2x.jpg 2x"
+                src="./images/ourteam/images-gerrera.jpg"
                 alt="Mark Guerrero"
                 width="264"
               />
@@ -193,8 +193,8 @@
             </li>
             <li class="aside-item">
               <img
-                srcset="../images/ourteam/ford-img@2x.jpg 2x"
                 class="aside-pic"
+                srcset="./images/ourteam/ford-img@2x.jpg 2x"
                 src="./images/ourteam/images-ford.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -236,8 +236,8 @@
             </li>
             <li class="aside-item">
               <img
-                srcset="../images/ourteam/garcia-img@2x.jpg 2x"
                 class="aside-pic"
+                srcset="./images/ourteam/garcia-img@2x.jpg 2x"
                 src="./images/ourteam/images-garcia.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -279,8 +279,8 @@
             </li>
             <li class="aside-item">
               <img
-                srcset="../images/ourteam/wilson-img@2x.jpg 2x"
                 class="aside-pic"
+                srcset="./images/ourteam/wilson-img@2x.jpg 2x"
                 src="./images/ourteam/images-wilson.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -687,7 +687,7 @@
     </div>
 
     <!--===== MOBILE-MENU ====== -->
-    <div class="mobile-menu" is-open>
+    <div class="mobile-menu">
       <button class="mobile-menu-btn-enter">
         <svg
           class="mobile-enter-close"
