--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
     </footer>
 
     <!--DFCKDROP WITH MODAL WINDOW -->
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="close-button-modal" type="button">
           <svg
