--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
     </footer>
 
     <!--DFCKDROP WITH MODAL WINDOW -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-button-modal" type="button">
           <svg
@@ -681,7 +681,9 @@
               <a href="" class="modal-checkbox-link">Privacy Policy</a>
             </label>
           </div>
-          <button class="button-modal-form-send" type="button">Send</button>
+          <div class="button-modal-modil-send">
+            <button class="button-modal-form-send" type="button">Send</button>
+          </div>
         </form>
       </div>
     </div>
